# oh-my-pi

./: .fallowrc.jsonc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.robomp  FORK.md  README.md  biome.json  bunfig.toml  package.json  rustfmt.toml
.github/: VOUCHED.td
crates/pi-shell/: Cargo.toml  NOTICE
crates/pi-shell/src/: cancel.rs  coreutils.rs  fd.rs  fixup.rs  lib.rs  minimizer.rs  shell.rs
crates/pi-shell/src/minimizer/: config.rs  detect.rs  engine.rs  pipeline.rs  plan.rs  primitives.rs
crates/pi-shell/src/minimizer/defs/: gcloud.toml  iptables.toml  jj.toml  mise.toml  npx.toml  nx.toml  ollama.toml  ping.toml  rails-migrate.toml  rails-routes.toml  rsync.toml  shopify-theme.toml  skopeo.toml  ssh.toml  swift-build.toml  turbo.toml  ty.toml  xcodebuild.toml
crates/pi-shell/src/minimizer/filters/: binary_tools.rs  bun.rs  cargo.rs  cloud.rs  cpp.rs  docker.rs  dotnet.rs  generic.rs  gh.rs  git.rs  glab.rs  go.rs  gt.rs  lint.rs  listing.rs  mod.rs  node_tests.rs  pkg.rs  ruby.rs  rust_tools.rs
crates/pi-shell/src/minimizer/filters/fixtures/jvm/: mvn_compile_error_slice_raw.txt  mvn_install_slice_raw.txt  mvn_locale_fr_raw.txt  mvn_no_pom_raw.txt  mvn_reactor_fail_slice_raw.txt  mvn_reactor_pass_slice_raw.txt  mvn_test_compile_fail_slice_raw.txt  mvn_test_fail_slice_raw.txt  mvn_test_multifail_slice_raw.txt  mvn_test_pass_slice_raw.txt
crates/pi-shell/tests/: minimizer_fixtures.rs
crates/pi-shell/tests/fixtures/minimizer/cargo/: test-pass.raw
crates/pi-shell/tests/fixtures/minimizer/glab/: ci-trace.cmd  release-list.cmd  release-list.min  release-view.cmd
crates/pi-shell/tests/fixtures/minimizer/go/: test-pass.raw
crates/pi-shell/tests/fixtures/minimizer/jvm/: gradle-test.min  mvn-install-full.raw  mvn-quiet-fail.cmd  mvn-quiet-fail.raw  mvn-test-pass-full.raw
crates/pi-shell/tests/fixtures/minimizer/npm/: install.raw
crates/pi-uutils-ctx/: Cargo.toml
crates/pi-uutils-ctx/src/: lib.rs
crates/pi-walker/: Cargo.toml
crates/pi-walker/src/: cache.rs  lib.rs
crates/pi-walker/tests/: parallel.rs  perf.rs
docs/: ERRATA-GPT5-HARMONY.md  advisor-watchdog.md  ai-schema-normalize.md  approval-mode.md  arktype-guide.md  bash-tool-runtime.md  blob-artifact-architecture.md  collab.md  compaction.md  config-usage.md  context-files.md  custom-tools.md  environment-variables.md  extension-loading.md  extensions.md  fs-scan-cache-architecture.md  handoff-generation-pipeline.md  hooks.md  install-id.md  keybindings.md  local-models.md  macos-signing-notarization.md  marketplace.md  mcp-config.md  mcp-protocol-transports.md  mcp-runtime-lifecycle.md  memory.md  (+41 more)
(+198 files in other folders)
