[package]
name = "pi-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# Portions of the minimizer adapt MIT-licensed algorithms from rtk-ai/rtk.
# See NOTICE at this crate root (packaged on publish).

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
brush-builtins.workspace = true
brush-core.workspace = true
brush-parser.workspace = true
clap.workspace = true
os_pipe.workspace = true
globset.workspace = true
ignore.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
xxhash-rust.workspace = true
flume.workspace = true
pi-walker.workspace = true
pi-uutils-ctx = { path = "../pi-uutils-ctx" }
uu_mkdir = { path = "../vendor/uu-mkdir" }
uu_head = { path = "../vendor/uu-head" }
uu_sort = { path = "../vendor/uu-sort" }
uu_wc = { path = "../vendor/uu-wc" }
uu_tail = { path = "../vendor/uu-tail" }
uu_rm = { path = "../vendor/uu-rm" }
uu_mv = { path = "../vendor/uu-mv" }
uu_ls = { path = "../vendor/uu-ls" }
uu_find = { path = "../vendor/uu-find" }
pi_uu_grep = { path = "../pi-uu-grep" }
uu_cat = { path = "../vendor/uu-cat" }
uu_uniq = { path = "../vendor/uu-uniq" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
smallvec.workspace = true
windows-sys.workspace = true
winreg.workspace = true
